feat integrate Spring Security with MariaDB and update dashboard UI
- Configured SecurityConfig to allow public access to root and database-driven entities.
- Implemented automatic admin user generation on application startup via CommandLineRunner using BCrypt encryption.
- Updated index.html dashboard with dynamic Thymeleaf Security tags (isAnonymous, isAuthenticated, hasRole) to show/hide the Admin Zone.